--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,22 @@
-.App {
-  text-align: center;
+#geral{
+  margin-top: 2%;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+#form-geral{
+  margin-top: 30px; 
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+#logo{
+  width: 30%;
 }
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+#lista-nick{
+  padding-top: 30px;
+  padding-bottom: 30px;
+  padding-left: 30%;
+  padding-right: 30%;
 }
-
-.App-link {
-  color: #61dafb;
+#input-nick{
+  padding-left: 30%;
+  padding-right: 30%;
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+#botao-iniciar-jogo{
+  margin-top: 30px;
 }
